--- a/TajMahal/TajMahal/SupportingFiles/Info.plist
+++ b/TajMahal/TajMahal/SupportingFiles/Info.plist
@@ -11,5 +11,11 @@
 		<key>UILaunchScreen</key>
 		<dict/>
 	</dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>PlusJakartaSans-Bold.ttf</string>
+		<string>PlusJakartaSans-Regular.ttf</string>
+		<string>PlusJakartaSans-SemiBold.ttf</string>
+	</array>
 </dict>
 </plist>
